# test

./: README.md  pyproject.toml
.github/workflows/: check_status.yml  cleanup.yml  full_system_check.yml  health_check.yml  maintenance.yml  run_task.yml  status_read.yml  test.yml
artifacts/: latest_result.json
artifacts/archive/: example_decision_task.json  fuzhou_security_job_20260702.json  fuzhou_side_job_20260702.json  fuzhou_side_job_20260702c.json  fuzhou_side_job_20260702d.json
configs/: cleanup.json  free_model_policy.json  mesa.json  models.json  plugins.json  routing.json  safety.json  upstream_sources.json
docs/: MAINTENANCE_MODE.md  PLUGIN_SYSTEM.md  WEBGPT_ORCHESTRATION_CONTRACT.md  WEBGPT_TASK_TEMPLATE.json
hebc_lite/: __init__.py  agents.py  cleanup.py  gpt_modeling.py  health_check.py  maintenance.py  maintenance_report.py  mesa_runner.py  orchestration.py  plugin_registry.py  repo_check.py  report_writer.py  router.py  run_task.py  schemas.py  status.py  upstream_monitor.py
jobs/status/: example_decision_task.status.json  fuzhou_security_job_20260702.status.json  fuzhou_side_job_20260702.status.json  fuzhou_side_job_20260702b.status.json  (+2 more)
reports/: actions_diagnosis.md  latest_report.md
tasks/processed/: index.json  (+4 more)
tests/: test_agents_mock.py  test_cleanup_policy.py  test_free_model_policy.py  test_health_check.py  test_live_openrouter_free.py  test_maintenance.py  test_mesa_mock.py  test_ops_report.py  test_orchestration.py  test_plugin_registry.py  test_repo_check.py  test_router.py  test_sources.py  test_status.py  test_task_schema.py
(+8 files in other folders)
