[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hebc-lite"
version = "0.1.0"
description = "HEBC Lite external analysis brain with Pydantic AI, Mesa, and GPT modeling"
requires-python = ">=3.11"
dependencies = [
  "pydantic-ai>=1.0.0,<2.0.0",
  "pydantic>=2.0.0,<3.0.0",
  "mesa>=3.0.0,<4.0.0"
]

[project.scripts]
hebc-lite = "hebc_lite.run_task:main"

[tool.setuptools.packages.find]
include = ["hebc_lite*"]
exclude = ["tests*", "configs*", "tasks*", "jobs*", "reports*", "artifacts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
